@@ -1,5 +1,7 @@
 package com.lwl.iplstats.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.lwl.iplstats.domain.Player;
 import com.lwl.iplstats.domain.Team;
 import com.lwl.iplstats.dto.PlayerDto;
@@ -12,9 +14,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.io.File;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 
 @Service
 @RequiredArgsConstructor
@@ -39,50 +44,70 @@ public class TeamServiceImpl implements TeamService {
     UUID tId = UUID.fromString(teamId);
     UUID pId = UUID.fromString(playerId);
     Team team = teamRepo.findById(tId).orElseThrow(
-        ()->new IllegalArgumentException("Team details are not found")
+        () -> new IllegalArgumentException("Team details are not found")
     );
-    Player player = playerRepo.findById(pId).orElseThrow(()->new IllegalArgumentException("Player details are not found"));
+    Player player = playerRepo.findById(pId).orElseThrow(() -> new IllegalArgumentException("Player details are not found"));
     team.addPlayer(player);
-    team=teamRepo.save(team);
-    TeamDto teamDto = Convertor.toTeamDto(team);
-    return teamDto;
+    team = teamRepo.save(team);
+    return Convertor.toTeamDto(team);
   }
+
   @Override
   public List<TeamDto> addTeams(List<TeamDto> list) {
-    List<Team> teamList = list.stream().map(Convertor::toTeam).collect(Collectors.toList());
+    List<Team> teamList = list.stream().map(Convertor::toTeam).toList();
     teamList = teamRepo.saveAll(teamList);
-    log.info("{} teams are added ",teamList.size());
-    List<TeamDto> teamListDto = teamList.stream().map(Convertor::toTeamDto).collect(Collectors.toList());
-    return teamListDto;
+    log.info("{} teams are added ", teamList.size());
+    return teamList.stream().map(Convertor::toTeamDto).toList();
   }
 
   @Override
   public TeamDto addPlayers(String teamId, List<PlayerDto> playersDto) {
     UUID tId = UUID.fromString(teamId);
     Team team = teamRepo.findById(tId).orElseThrow(
-            ()->new IllegalArgumentException("Team details are not found")
+        () -> new IllegalArgumentException("Team details are not found")
     );
-    List<Player> playerList = playersDto.stream().map(Convertor::toPlayer).collect(Collectors.toList());
+    List<Player> playerList = playersDto.stream().map(Convertor::toPlayer).toList();
     team.addPlayers(playerList);
     team = teamRepo.save(team);
-    log.info("{} players are added to team with id {}",playerList.size(), team.getId());
+    log.info("{} players are added to team with id {}", playerList.size(), team.getId());
     Team teamdto = teamRepo.getReferenceById(tId);
-    TeamDto teamDto = Convertor.toTeamDto(teamdto);
-    return teamDto;
+    return  Convertor.toTeamDto(teamdto);
+    
   }
 
   @Override
   public List<TeamBasicDto> getTeamBasicDetails() {
     List<Team> teams = teamRepo.findAll();
-    List<TeamBasicDto> teamBasicDtos = teams.stream().map(ele -> {
-      TeamBasicDto obj =
-          TeamBasicDto.builder()
+    return teams.stream().map(ele -> 
+        TeamBasicDto.builder()
               .id(ele.getId())
               .name(ele.getName())
               .label(ele.getLabel())
-              .captain(ele.getCaptain()).build();
-      return obj;
-    }).collect(Collectors.toList());
-    return teamBasicDtos;
+              .captain(ele.getCaptain()).build()
+      
+    ).toList();
+  }
+
+  @Override
+  public String uploadFile(MultipartFile multipartFile) {
+
+    CompletableFuture.runAsync(() -> {
+      try {
+        log.info("Creating Temp Directory");
+        String tmpdir = System.getProperty("java.io.tmpdir");
+        File newFile = new File(tmpdir + "/team_player.json");
+        log.info("Temp file is create at :{}",newFile);
+        multipartFile.transferTo(newFile);
+        ObjectMapper objectMapper = new ObjectMapper();
+        List<TeamDto> teamDtoList = objectMapper.readValue(newFile, new TypeReference<List<TeamDto>>() {
+        });
+        List<Team> teamList = teamDtoList.stream().map(Convertor::toTeam).toList();
+        log.info("Added {} team details ",teamList.size());
+        teamList = teamRepo.saveAll(teamList);
+      } catch (Exception e) {
+        log.error("While uploading file content :" + e);
+      }
+    });
+    return "File uploaded successfully";
   }
 }
